--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,6 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" data-theme="vintage">
-		<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
